tests/const_imports/const_imports.exp
Error ------------------------------------------------------------------------------------------------------ dep.js:2:12

Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type
annotation at declaration of variable `named`: [signature-verification-failure]

   2| export var named = 'asdf';
                 ^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:1:33

Cannot reassign import `named` [1]. [reassign-import]

   test.js:1:33
   1| import {named} from "./dep.js"; named = 43; // error
                                      ^^^^^

References:
   test.js:1:9
   1| import {named} from "./dep.js"; named = 43; // error
              ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:2:29

Cannot reassign import `def` [1]. [reassign-import]

   test.js:2:29
   2| import def from "./dep.js"; def = "nope"; // error
                                  ^^^

References:
   test.js:2:8
   2| import def from "./dep.js"; def = "nope"; // error
             ^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:3:33

Cannot reassign import `ns` [1]. [reassign-import]

   test.js:3:33
   3| import * as ns from "./dep.js"; ns = {}; // error
                                      ^^

References:
   test.js:3:13
   3| import * as ns from "./dep.js"; ns = {}; // error
                  ^^ [1]



Found 4 errors
